// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SecondaryButton /> Snapshot Bordered 1`] = `
<StyledSecondaryButton
  element="a"
  fontSize="regular"
  fullWidth={false}
  isDisabled={false}
  render={[Function]}
  size="regular"
  to="#"
  variant="bordered"
/>
`;

exports[`<SecondaryButton /> Snapshot Bordered Small 1`] = `
<StyledSecondaryButton
  element="a"
  fontSize="regular"
  fullWidth={false}
  isDisabled={false}
  render={[Function]}
  size="small"
  to="#"
  variant="bordered"
/>
`;

exports[`<SecondaryButton /> Snapshot Default 1`] = `
<StyledSecondaryButton
  element="a"
  fontSize="regular"
  fullWidth={false}
  isDisabled={false}
  render={[Function]}
  size="regular"
  to="#"
  variant="regular"
/>
`;

exports[`<SecondaryButton /> Snapshot Default Button Element 1`] = `
<StyledSecondaryButton
  element="button"
  fontSize="regular"
  fullWidth={false}
  isDisabled={false}
  render={[Function]}
  size="regular"
  to="#"
  variant="regular"
/>
`;

exports[`<SecondaryButton /> Snapshot Default Small 1`] = `
<StyledSecondaryButton
  element="a"
  fontSize="regular"
  fullWidth={false}
  isDisabled={false}
  render={[Function]}
  size="small"
  to="#"
  variant="regular"
/>
`;
